Add angular material

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,5 +18,5 @@
             </li>
         </ul>
     </nav>
-    <button> MY PROFILE </button>
+    <button mat-button> MY PROFILE </button>
 </div>
