Add custom theme & adjust style of button

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,5 +18,5 @@
             </li>
         </ul>
     </nav>
-    <button mat-button> MY PROFILE </button>
+    <button mat-raised-button color="primary"> MY PROFILE </button>
 </div>
