--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto&display=swap');
 
-@import "variables";
-
+@import "./styles/variables.scss";
+@import "./styles/material-theme.scss";
 
 * {box-sizing: border-box;}
 
