Create welcome component & add routing

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,10 +2,10 @@
     <div class="logo">
         <span> train </span><img src="assets/logo.png" alt="Train logo"> <span> APP </span>
     </div>    
-    <nav class="nav_links">
+    <nav class="nav-links">
         <ul>
             <li>
-                <a href="#">Placeholder1</a>
+                <a [routerLink]="['/playground']">Playground</a>
             </li>
             <li>
                 <a href="#">Placeholder2</a>
