--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
     <nav class="nav-links">
         <ul>
             <li>
-                <a href="#">Placeholder1</a>
+                <a [routerLink]="['/widgets']">Widgets</a>
             </li>
             <li>
                 <a href="#">Placeholder2</a>
