Fix playground styles

--- a/src/app/components/playground/playground.component.html
+++ b/src/app/components/playground/playground.component.html
@@ -1,5 +1,5 @@
 <div class="page-content">
-    <div class="header">
+    <div class="page-header">
         <h1> Playground 
             <mat-icon title="Have fun!">info</mat-icon>
         </h1>
