--- a/src/app/components/widgets/widgets.component.html
+++ b/src/app/components/widgets/widgets.component.html
@@ -1,7 +1,8 @@
 <div class="page-content">
     <h1 class="page-header">Widgets</h1>
+    <div class="widgets">
         <div class="weather">
             <app-weather></app-weather>
         </div>
-
+    </div>
 </div>
